exports[`test Button changes the text when clicked 1`] = `
<button
  onClick={[Function]}>
  not clicked
</button>
`;

exports[`test Button changes the text when clicked 2`] = `
<button
  onClick={[Function]}>
  clicked
</button>
`;
